  * Added flags to setMode.
  * Added support for resizable and borderless windows.
  * Added resize event.
  * Added love.math module.
  * Added a platform-independent (good) random implementation to love.math.
  * Added blend mode "none".
  * Added SpriteBatch:isEmpty and SpriteBatch:isFull.
  * Added support for extern Images in Shaders when drawing graphics primitives.
  * OPTIONAL: Added support for GME.

  * Fixed crashes with font drawing on some ATI cards.
  * Fixed scaling in several love.physics functions.
  * Fixed artifacts when drawing lines at huge scale.
  * Fixed Fonts and Canvases ignoring default image filter.
  * Fixed getMode and friends returning wrong values when using desktop size.
  * Fixed memory leak in the mp3 decoder.
  * Fixed sound issues with some versions of OpenAL soft, by enabling direct channels.
  * Fixed 'random' hangs in audio.
  * Fixed love.graphics.getLineWidth returning incorrect values.
  * Fixed possible memory leak in utf-8 decoder.
  * Fixed love.sound.newDecoder not accepting FileData.
  * Fixed multiplicative blend mode.
  * Fixed Box2D exception in World:update.
  * Fixed spacing for the last character in an ImageFont.
  * Fixed crash when binding SpriteBatches multiple times.
  * Fixed File:read reading past end of file.
  * Fixed keyrepeat settings being lost after (indirect) setMode.
  * Fixed alpha blend mode.
  * Fixed Shader:send with Images and Canvases failing sometimes.
  * Fixed love.graphics.getPointStyle.
  * Fixed line numbers in shader errors.

  * Moved love's startup to modules/love.

  * Renamed love's boot script to 'love.boot', which can be required.
  * Renamed PixelEffect to Shader (but now with vertex shaders).

  * Removed love.joystick.open and friends.
  * Removed love.graphics.drawTest.
  * Removed thread names.
  * Removed old thread messaging api (see Channels).
  * Removed love.graphics.quad/triangle.
  * Removed ColorMode functions.
